[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Arena.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Label.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://Scripts/highscore.gd" type="Script" id=6]
[ext_resource path="res://Scenes/enemy_2.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/enemy_1.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/enemy_3.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Lives.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=11]
[ext_resource path="res://Assets/damage-bg.png" type="Texture" id=12]

[sub_resource type="Environment" id=6]
background_mode = 4
glow_enabled = true
glow_bloom = 0.5
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=2]
size = 50
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[node name="Arena" type="Node2D"]
script = ExtResource( 2 )
enemys = [ ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ) ]

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 320, 180 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 6 )

[node name="enemy_spawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="difficulty" type="Timer" parent="."]
autostart = true

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
margin_right = 640.0
margin_bottom = 360.0
script = ExtResource( 11 )

[node name="Label" type="Label" parent="UI/Control"]
margin_right = 640.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="highscore" type="Label" parent="UI/Control"]
margin_top = 279.0
margin_right = 640.0
margin_bottom = 359.0
custom_fonts/font = SubResource( 3 )
text = "0"
valign = 2
script = ExtResource( 6 )

[node name="vidas" type="TextureRect" parent="UI/Control"]
modulate = Color( 0.717647, 0.423529, 0.490196, 1 )
margin_left = 15.0
margin_top = 15.0
margin_right = 35.0
margin_bottom = 35.0
texture = ExtResource( 10 )
expand = true
stretch_mode = 2

[node name="damage" type="TextureRect" parent="UI/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 12 )

[node name="camera" type="Camera2D" parent="."]
position = Vector2( 320, 180 )
current = true
script = ExtResource( 5 )

[node name="timer" type="Timer" parent="camera"]

[connection signal="timeout" from="enemy_spawn" to="." method="_on_enemy_spawn_timeout"]
[connection signal="timeout" from="difficulty" to="." method="_on_difficulty_timeout"]
[connection signal="timeout" from="camera/timer" to="camera" method="_on_timer_timeout"]
